Convert image to CentOS
* Add pip requirements file
* Add clouds.yaml example file
* Update Dockerfile
* Fix typo on prometheus-openstack-exporter

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-configparser==3.5
-flake8
-mock
-prometheus-client
-python-neutronclient
-python-novaclient
-swift
+flake8==3.7.9
+keystoneauth1==3.11.2
+netaddr==0.7.19
+openstacksdk==0.24.0
+oslo.config==6.8.0
+oslo.context==2.21.0
+oslo.i18n==3.23.0
+oslo.log==3.41.0
+oslo.serialization==2.28.1
+oslo.utils==3.40.2
+prometheus-client==0.7.1
+python-cinderclient==4.1.0
+python-keystoneclient==3.18.0
+python-neutronclient==6.11.0
+python-novaclient==12.0.0
+python-openstackclient==3.14.3
+python-swiftclient==3.6.0
+requests-oauthlib==1.2.0
+requests==2.22.0
+requestsexceptions==1.4.0
+swift==2.23.1
