--- a/prometheus-openstack-exporter.sample.yaml
+++ b/prometheus-openstack-exporter.sample.yaml
@@ -5,10 +5,10 @@
 listen_port: VAR_LISTEN_PORT # listenPort=9183
 cache_refresh_interval: VAR_CACHE_REFRESH_INTERVAL # cacheRefreshInterval=300 In seconds
 cache_file: VAR_CACHE_FILE # cacheFileName=$(mktemp -p /dev/shm/)
-cloud: VAR_CLOUD # cloud=${OS_REGION_NAME:-mycloud}
 openstack_allocation_ratio_vcpu: VAR_VCPU_RATIO # vcpuRatio=1.0
 openstack_allocation_ratio_ram: VAR_RAM_RATIO # ramRatio=1.0
 openstack_allocation_ratio_disk: VAR_DISK_RATIO # diskRatio=1.0
+log_level: DEBUG_LEVEL
 
 # Configure the enabled collectors here.  Note that the Swift account
 # collector in particular has special requirements.
