--- a/prometheus-openstack-exporter.sample.yaml
+++ b/prometheus-openstack-exporter.sample.yaml
@@ -9,6 +9,7 @@ openstack_allocation_ratio_vcpu: VAR_VCPU_RATIO # vcpuRatio=1.0
 openstack_allocation_ratio_ram: VAR_RAM_RATIO # ramRatio=1.0
 openstack_allocation_ratio_disk: VAR_DISK_RATIO # diskRatio=1.0
 log_level: DEBUG_LEVEL
+config_dir: /etc/prometheus
 
 # Configure the enabled collectors here.  Note that the Swift account
 # collector in particular has special requirements.
